<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/Widget.Monaca.MaterialComponents.TextInputLayout.FilledBox.SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_huge"
        android:layout_marginEnd="@dimen/component_margin_large"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_email"
            style="@style/ThemeOverlay.Monaca.MaterialComponents.TextInputEditText.SignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/hint_email"
            android:focusedByDefault="true"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/text_input_edit_text_password"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/Widget.Monaca.MaterialComponents.TextInputLayout.FilledBox.SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_normal"
        android:layout_marginEnd="@dimen/component_margin_large"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            style="@style/ThemeOverlay.Monaca.MaterialComponents.TextInputEditText.SignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/hint_password"
            android:hint="@string/hint_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusForward="@id/button_sign_in"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        style="@style/Widget.Monaca.MaterialComponents.Button.TextButton.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_normal"
        android:layout_marginEnd="@dimen/component_margin_large"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="@color/color_btn_sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot_password"
        style="@style/Widget.Monaca.MaterialComponents.Button.TextButton.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_small"
        android:layout_marginEnd="@dimen/component_margin_large"
        android:enabled="false"
        android:padding="0dp"
        android:text="@string/action_forgot_password"
        android:textColor="@color/color_btn_forgot_password_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in_with_google"
        style="@style/Widget.Monaca.MaterialComponents.Button.TextButton.SignInWithSocialAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_large"
        android:layout_marginEnd="@dimen/component_margin_large"
        android:padding="0dp"
        android:text="@string/action_sign_in_with_google"
        app:backgroundTint="@color/aliza_rin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in_with_facebook"
        style="@style/Widget.Monaca.MaterialComponents.Button.TextButton.SignInWithSocialAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/component_margin_large"
        android:layout_marginTop="@dimen/component_margin_small"
        android:layout_marginEnd="@dimen/component_margin_large"
        android:padding="0dp"
        android:text="@string/action_sign_in_with_facebook"
        app:backgroundTint="@color/belize_hole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in_with_google" />

    <ProgressBar
        android:id="@+id/progress_bar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
